Modernize UI with Claude Desktop-inspired design
- Implement dark/light/system theme support with useTheme hook
- Redesign sidebar with Lucide React icons and gradient logo
- Update chat interface with modern bubble-style messages
- Add smooth animations and transitions throughout
- Improve Discovery settings with compact toggle design
- Modernize input area with integrated buttons
- Update color scheme with Algolia blue and dark mode support
- Enhance product cards with hover effects
- Add custom scrollbar styles
- Update GitHub Actions to build Windows version only

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [windows-latest, ubuntu-latest, macos-latest]
+        os: [windows-latest]
         include:
           - os: windows-latest
             platform: win
@@ -19,19 +19,6 @@ jobs:
             artifact-path: |
               release/**/*.exe
               release/**/win-unpacked/**
-          - os: ubuntu-latest
-            platform: linux
-            artifact-name: linux
-            artifact-path: |
-              release/**/*.AppImage
-              release/**/*.deb
-              release/**/*.rpm
-          - os: macos-latest
-            platform: mac
-            artifact-name: macos
-            artifact-path: |
-              release/**/*.dmg
-              release/**/*.zip
 
     runs-on: ${{ matrix.os }}
 
@@ -83,8 +70,6 @@ jobs:
         with:
           files: |
             windows-build/**/*.exe
-            linux-build/**/*.AppImage
-            macos-build/**/*.dmg
           draft: false
           prerelease: false
         env:
