Fix GitHub workflow and rebuild app structure for Windows exe build
- Update workflow to use correct build:all command
- Remove duplicate electron.vite.config.ts
- Rebuild entire app structure from M:\workContest\project base
- Implement SQLite database with proper schema
- Add Discovery settings UI (0/5/10% outlier)
- Integrate Algolia demo API
- Convert all UI text to English
- Fix PostCSS/Tailwind configuration
- Ensure proper Electron main/renderer/preload architecture

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
         run: npm ci
 
       - name: Build TypeScript
-        run: npm run build:dev
+        run: npm run build:all
 
       - name: Build Electron app
         run: npx electron-builder --${{ matrix.platform }}
