Fix MCP server build and execution
- Create separate mcp-entry.ts to avoid Electron dependencies
- Add mcp:build script to compile TypeScript files properly
- Update mcp-server.bat to use correct compiled file path
- Add MCP mode support to DatabaseService with alternative paths
- Add MCP-SETUP.md documentation for configuration

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "preview": "vite preview",
     "lint": "eslint src --ext .ts,.tsx",
     "type-check": "tsc --noEmit",
-    "preprocess-amazon-data": "tsc scripts/preprocess-amazon-data.ts --outDir dist/scripts --target es2020 --module commonjs && node dist/scripts/preprocess-amazon-data.js"
+    "preprocess-amazon-data": "tsc scripts/preprocess-amazon-data.ts --outDir dist/scripts --target es2020 --module commonjs && node dist/scripts/preprocess-amazon-data.js",
+    "mcp:build": "tsc src/main/mcp-entry.ts src/main/database.ts src/main/personalization.ts src/main/mcp-server.ts --outDir dist/main --target es2020 --module commonjs --esModuleInterop --resolveJsonModule --skipLibCheck",
+    "mcp:start": "node dist/main/mcp-entry.js"
   },
   "keywords": [
     "electron",
