feat: Enhance MCP server stability and add ChatHistory auto-categorization
- Enhanced MCP server with better error handling and detailed logging
- Added keep-alive mechanism with 30-second heartbeat
- Fixed build-extension.js to handle better-sqlite3 permission errors
- Added filter to skip problematic files during node_modules copy
- Implemented ChatHistory auto-categorization on first search results
- Added categorizedSessions state to track which sessions have been categorized
- Fixed package.json to use npx tsc for environments without global TypeScript
- Improved database initialization error handling in MCP server

These changes improve MCP server stability and user experience with automatic category detection.

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lint": "eslint src --ext .ts,.tsx",
     "type-check": "tsc --noEmit",
     "preprocess-amazon-data": "tsc scripts/preprocess-amazon-data.ts --outDir dist/scripts --target es2020 --module commonjs && node dist/scripts/preprocess-amazon-data.js",
-    "mcp:build": "tsc src/main/mcp-standalone.js src/main/database.ts src/main/personalization.ts src/main/mcp-server.ts --outDir dist/main --target es2020 --module commonjs --esModuleInterop --resolveJsonModule --skipLibCheck --allowJs",
+    "mcp:build": "npx tsc src/main/mcp-standalone.js src/main/database.ts src/main/personalization.ts src/main/mcp-server.ts --outDir dist/main --target es2020 --module commonjs --esModuleInterop --resolveJsonModule --skipLibCheck --allowJs",
     "mcp:start": "node dist/main/mcp-standalone.js",
     "build:extension": "node scripts/build-extension.js"
   },
