--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
       "dist/main/mcp-standalone.js",
       "dist/main/database.js",
       "dist/main/personalization.js",
-      "dist/main/mcp-server.js"
+      "dist/main/mcp-server.js",
+      "dist/main/mcp-server-simple.js"
     ],
     "extraMetadata": {
       "main": "dist/main/main.js"
