--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shopping-for-algolia-personalized",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "AI-powered personalized shopping assistant with Gemini API image analysis and Algolia MCP integration",
   "main": "dist/main/main.js",
   "homepage": ".",
@@ -96,6 +96,8 @@
     "asarUnpack": [
       "node_modules/better-sqlite3/**/*",
       "node_modules/keytar/**/*",
+      "node_modules/@modelcontextprotocol/**/*",
+      "node_modules/zod/**/*",
       "src/data/**/*",
       "mcp-server.bat",
       "mcp-server.sh",
