--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "clean": "rimraf dist release",
     "build": "npm run clean && npm run build:all && electron-builder",
     "build:win": "npm run clean && npm run build:all && electron-builder --win",
-    "build:all": "npm run build:main && npm run build:renderer && node scripts/copy-data.js && node scripts/copy-mcp.js",
+    "build:all": "npm run build:main && npm run build:renderer && node scripts/copy-data.js && npm run copy:algolia-mcp",
     "build:main": "tsc -p tsconfig.main.json",
     "build:renderer": "vite build && node scripts/postbuild.js",
     "build:dev": "npm run clean && npm run build:all",
