fix: resolve Algolia MCP executable path issue in production
- Fix resource path in algolia-mcp-client.ts for production builds
- Add 'resources' subdirectory to match actual build output structure
- Remove algolia-mcp from asarUnpack to prevent duplication
- Keep it only in extraResources for cleaner build structure

This fixes the 'MCP executable not found' error when setting API keys
in the installed application.

--- a/package.json
+++ b/package.json
@@ -107,8 +107,7 @@
       "mcp-server.sh",
       "dist/main/mcp-minimal.js",
       "dist/main/database.js",
-      "dist/main/personalization.js",
-      "resources/algolia-mcp/**/*"
+      "dist/main/personalization.js"
     ],
     "extraResources": [
       "resources/algolia-mcp/**/*"
