fix: include node_modules in Algolia MCP Server build
- Add node_modules copy to copy-algolia-mcp.js script
- Filter out development dependencies to reduce size
- Update GitHub Actions to install dependencies before copying
- This fixes 'Cannot find package commander' error

Now the official Algolia MCP Server will have all required
dependencies available at runtime.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,6 +96,13 @@ jobs:
           if [ -d "../AIgolia-mcp-node-main/src" ]; then
             echo "✓ Official Algolia MCP Server repository cloned successfully"
             ls -la ../AIgolia-mcp-node-main/
+            
+            # Install dependencies for Algolia MCP Server
+            echo "Installing Algolia MCP Server dependencies..."
+            cd ../AIgolia-mcp-node-main
+            npm install --production
+            cd -
+            echo "✓ Dependencies installed"
           else
             echo "✗ Failed to clone Algolia MCP Server repository"
             exit 1
