Fix Claude Desktop integration: Handle Node.js module compatibility
- Updated extension manifest to v1.0.1 with hybrid architecture description
- Modified mcp-minimal.js to gracefully handle database loading failures
- Added fallback mode when better-sqlite3 cannot be loaded due to version mismatch
- Updated build-extension.js to skip better-sqlite3 native bindings
- Reduced DXT file size from 12.19MB to 2.44MB by excluding problematic modules
- MCP server now returns helpful error messages when database is unavailable

This fixes NODE_MODULE_VERSION mismatch errors in Claude Desktop

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,9 +2,9 @@
   "dxt_version": "0.1",
   "name": "shopping-for-algolia-personalized",
   "display_name": "Shopping for Algolia Personalized",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Read-only access to your shopping personalization data from the Shopping for Algolia app",
-  "long_description": "This extension provides read-only access to your shopping personalization profile created by the Shopping for Algolia Personalized desktop app. View your category preferences, price ranges, and shopping patterns to help AI assistants understand your shopping preferences.",
+  "long_description": "This extension provides read-only access to your shopping personalization profile created by the Shopping for Algolia Personalized desktop app. The app uses a hybrid approach: Algolia JavaScript API for initial data setup and Algolia MCP Server for all ongoing operations. View your category preferences, price ranges, and shopping patterns to help AI assistants understand your shopping preferences.",
   "author": {
     "name": "Shopping for Algolia Team"
   },
