Update .gitignore to exclude build artifacts and deprecated files
- Add patterns for old/deprecated files (*-old.*)
- Exclude external Algolia MCP source (generated during build)
- Add specific build output directories
- Remove README.md from gitignore (was mistakenly included)
- Keep preprocessed data files in src/data/

--- a/.gitignore
+++ b/.gitignore
@@ -51,5 +51,17 @@ keys.json
 testlist.md
 reclist.md
 
-# Documentation (pending final review)
-README.md
+# Old/deprecated files
+*-old.*
+*-old/
+
+# External sources (managed via npm)
+resources/algolia-mcp/
+
+# Build output variations
+release-win/
+release-mac/
+release-linux/
+__appImage-x64/
+linux-unpacked/
+win-unpacked/
